Main pul request

--- a/konto.html
+++ b/konto.html
@@ -25,8 +25,8 @@
 	</script>
 <style>
 	.rejestracja {width: 100px; height: 50px; background-color: #0f0; margin-left: 35px;}
-	.rejestracja:hover {background-color: #ff0; font-size: 13pt;}
-	.formul {margin-left: 185px; border: 3px solid #CC0033; width: 175px; position: relative;}
+	.rejestracja:hover {background-color: rgb(54, 54, 17); font-size: 13pt;}
+	.formul {margin-left: 185px; border: 3px solid #743545; width: 175px; position: relative;}
 	h1 {margin: auto; text-align: center;}
 	</style>
 </head>
@@ -72,7 +72,7 @@
 
 </div>
 <div class="stopka">
-<h4>Wykonał:Maksymilian Krzciuk i Adrian Piętak i Kamil Stachowicz</h4>
+<h4>Wykonali: Martyna Pęcherzewska i Kamil Stachowicz</h4>
 
 </div>
 </div>
