--- a/tekst.html
+++ b/tekst.html
@@ -13,7 +13,7 @@
 <body>
 
 
-<h3>  Bizon – rodzaj dużych ssaków wołowatych charakteryzujących się krótką, szeroką głową, krótką szyją i wysokim kłębem. Owłosienie przedniej części ciała jest dłuższe.
+<h3>  Bizooon – rodzaj dużych ssaków wołowatych charakteryzujących się krótką, szeroką głową, krótką szyją i wysokim kłębem. Owłosienie przedniej części ciała jest dłuższe.
 Za przodka gatunków zaliczanych do rodzaju Bison większość autorów uznaje azjatycki gatunek opisany jako Bison sivalensis Lydekker. Rozprzestrzenione w plejstocenie na terenie Europy i Azji, przedostały się do Ameryki Północnej. 
 
 
