--- a/tekst.html
+++ b/tekst.html
@@ -13,7 +13,7 @@
 <body>
 
 
-<h3>  Bizooon – rodzaj dużych ssaków wołowatych charakteryzujących się krótką, szeroką głową, krótką szyją i wysokim kłębem. Owłosienie przedniej części ciała jest dłuższe.
+<h3>  Bizon – rodzaj dużych ssaków wołowatych charakteryzujących się krótką, szeroką głową, krótką szyją i wysokim kłębem. Owłosienie przedniej części ciała jest dłuższe.
 Za przodka gatunków zaliczanych do rodzaju Bison większość autorów uznaje azjatycki gatunek opisany jako Bison sivalensis Lydekker. Rozprzestrzenione w plejstocenie na terenie Europy i Azji, przedostały się do Ameryki Północnej. 
 
 
@@ -59,7 +59,7 @@ Panda wielka – gatunek drapieżnego ssaka z rodziny niedźwiedziowatych. Panda
 	
 	Kangur olbrzymi – duży torbacz z rodziny kangurowatych, endemit kontynentu australijskiego, jeden z najbardziej popularnych kangurów, często mylony z kangurem szarym, łapanym dla skór i mięsa już przez Aborygenów. Przez Europejczyków widziany po raz pierwszy w 1770. Obok kangura rudego i szarego należy do największych współcześnie żyjących torbaczy. Ciało pokrywa gładka, miękka i gęsta sierść koloru szarobrunatnego, część brzuszna, nogi i spodnia część ogona są jaśniejsze, na części twarzowej mogą miejscami występować siwe włosy. Kangury olbrzymie z terenów położonych bliżej wybrzeży mają jaśniejsze futro niż w głębi lądu, natomiast na południu kontynentu i w Tasmanii mają futro dłuższe.</h3>
 	
-	
+	<h3>	Lew afrykański, lew – gatunek mięsożernego ssaka lądowego z podrodziny panter w rodzinie kotowatych, drugi po tygrysie – co do wielkości – wśród pięciu wielkich kotów. Jedyny kot żyjący w zorganizowanych grupach socjalnych, zaliczany do tzw. wielkiej piątki Afryki – pięciu najbardziej niebezpiecznych zwierząt afrykańskich (słoń, nosorożec, bawół, lew i lampart). Samiec lwa, łatwo rozpoznawalny po grzywie, może ważyć 150–200 kg. Największy znany samiec ważył 375 kg, był to lew o imieniu Simba, żył on do 1970 roku w Colchester Zoo. Samice są znacznie mniejsze, ważą 120–180 kg (największe 185 kg) i nie mają grzywy. Samce zajmują się zdobywaniem i obroną terytorium oraz ochroną stada i zapładnianiem samic. Samice polują i opiekują się lwiątkami.
 	
 	
 	
