--- a/quiz.html
+++ b/quiz.html
@@ -66,12 +66,12 @@ form.wyniki.value = correctodpowiedz;
 <INPUT type=radio name="111" value="c">Koza<BR> 
 <INPUT type=radio name="111" value="d">Słonie Afrykańskie</P> 
 
-<P><B>3. W którym wieku Europejczycy poraz pierwszy zobaczyli kangury?</B><BR><BR> 
+<P><B>3. W którym wieku Europejczycy pierwszy raz zobaczyli kangury?</B><BR><BR> 
 
-<INPUT type=radio name="21" value="a">W 21 wieku<BR> 
-<INPUT type=radio name="21" value="b">W 17 wieku<BR> 
-<INPUT type=radio name="21" value="c">W 18 wieku<BR> 
-<INPUT type=radio name="21" value="d">W 14 wieku</P> 
+<INPUT type=radio name="21" value="a">W XXI wieku<BR> 
+<INPUT type=radio name="21" value="b">W XVIII wieku<BR> 
+<INPUT type=radio name="21" value="c">W XVIII wieku<BR> 
+<INPUT type=radio name="21" value="d">W XIV wieku</P> 
 
 <P><B>4. Co jest głównym pożywieniem pandy?</B><BR><BR> 
 
