--- a/strona.html
+++ b/strona.html
@@ -54,7 +54,7 @@
 
 </div>
 <div class="stopka">
-<h4>Wykonał:Kamil Stachowicz</h4>
+<h4>Wykonali: Kamil Stachowicz i Martyna Pęcherzewska</h4>
 
 </div>
 </div>
